Add basic structure

--- a/_myassets/_sass/_style.scss
+++ b/_myassets/_sass/_style.scss
@@ -1,1 +1,9 @@
 // Put your custom styles here
+.error404 {
+    img {
+        display: none;
+    }
+    h3 {
+        font-size: 100px;
+    }
+}
