Update third-party licenses and other pages

--- a/_myassets/_sass/_theme.scss
+++ b/_myassets/_sass/_theme.scss
@@ -9,6 +9,8 @@
     --accent-hover-back-color: #bfd7d2;
     --accent-border-color: #a4bfba;
     --accent-contrast-color: #fff;
+    --draft-back-color: #eaf9f6;
+    --draft-border-color: transparent;
 }
 
 // Dark colors
@@ -20,4 +22,6 @@
     --accent-hover-back-color: #bfd7d2;
     --accent-border-color: #a4bfba;
     --accent-contrast-color: #fff;
+    --draft-back-color: #2e423e;
+    --draft-border-color: transparent;
 }
